--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div id="app">
         <header>
+            <button id="settings-btn" aria-label="Settings">⚙️</button>
             <div class="score-board">
                 <div class="score-label">BEST <span id="best-score">0</span></div>
                 <div class="score-label">SCORE <span id="current-score">0</span></div>
@@ -23,10 +24,20 @@
 
         <main id="game-container">
             <canvas id="game-canvas"></canvas>
-            <div id="game-over-overlay" class="hidden">
+            <div id="game-over-overlay" class="hidden overlay">
                 <h1>Game Over</h1>
                 <p>Final Score: <span id="final-score">0</span></p>
                 <button id="restart-btn">Try Again</button>
+            </div>
+            <div id="settings-modal" class="hidden overlay">
+                <div class="modal-content">
+                    <h2>Settings</h2>
+                    <div class="setting-item">
+                        <label for="sensitivity-slider">Sensitivity: <span id="sensitivity-value">1.5</span></label>
+                        <input type="range" id="sensitivity-slider" min="1.0" max="3.0" step="0.1" value="1.5">
+                    </div>
+                    <button id="close-settings-btn">Close</button>
+                </div>
             </div>
         </main>
         
