add colors to blocks

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<h1>Game Over</h1>
 					<p>Final Score: <span id="final-score">0</span></p>
 					<button id="restart-btn">Try Again</button>
-					<button id="replay-btn">▶ Replay Game</button>
+					<!-- <button id="replay-btn">▶ Replay Game</button> --> <!-- Replay button is disabled for now because it's not working and not really necessary -->
 				</div>
 				<div id="settings-modal" class="hidden overlay">
 					<div class="modal-content">
