Add end game random quotes and interesting facts

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 				<div id="game-over-overlay" class="hidden overlay">
 					<h1>Game Over</h1>
 					<p>Final Score: <span id="final-score">0</span></p>
+					<p id="game-over-quote" style="font-style: italic; opacity: 0.8; margin: 10px 0"></p>
 					<button id="restart-btn">Try Again</button>
 					<!-- <button id="replay-btn">▶ Replay Game</button> -->
 					<!-- Replay button is disabled for now because it's not working and not really necessary -->
