Enhance build process and TypeScript compilation
- Updated build.js to compile client-side and API route TypeScript separately, improving clarity and error handling.
- Removed the homepage setting from package.json to simplify configuration.
- Adjusted TypeScript module resolution in API files by removing '.js' extensions.
- Modified service-worker.js to ignore search parameters when matching cached requests.
- Updated tsconfig.json to exclude node_modules and dist directories, ensuring cleaner builds.
- Refactored replay management in the game engine to support loading and saving replay states from local storage.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 				// Save name when input loses focus (blur). The 'input' event was too aggressive.
 				nameInput.addEventListener("blur", (e) => {
-					const value = (e.target as HTMLInputElement).value.trim()
+					const value = (e.target).value.trim()
 					if (value) {
 						localStorage.setItem("bp_player_name", value)
 					} else {
