--- a/index.html
+++ b/index.html
@@ -38,19 +38,6 @@
 				</div>
 			</div>
 
-			<div id="replay-overlay" class="hidden overlay">
-				<div class="replay-controls">
-					<div class="replay-header">
-						<h2>Replaying Game</h2>
-						<div class="replay-stats">
-							<span>Move: <span id="replay-move">0</span>/<span id="replay-total">0</span></span>
-							<span>Score: <span id="replay-score">0</span></span>
-						</div>
-					</div>
-					<button id="replay-exit" class="secondary-btn">Exit</button>
-				</div>
-			</div>
-
 			<div id="highscore-notification" class="hidden">New High Score!</div>
 
 			<main id="game-container">
@@ -63,16 +50,18 @@
 					<p id="game-over-highscore-label" class="hidden">New High Score!</p>
 					<p>Final Score: <span id="final-score">0</span></p>
 					<p id="game-over-quote"></p>
-					<div class="name-input-group">
-						<input type="text" id="player-name-input" maxlength="20" placeholder="Player" />
-						<button id="submit-score-btn" class="secondary-btn">Submit Score</button>
+					<div id="player-name-submission-container">
+						<input type="text" id="player-name-input" placeholder="Enter your name" />
 					</div>
+					<!-- <div id="player-name-display" class="hidden">
+						<p>Player: <span id="display-player-name"></span></p>
+					</div> -->
+					<button id="submit-score-btn" class="secondary-btn" disabled>Submit Score</button>
 					<div id="submission-status-message" class="hidden"></div>
-					<div id="leaderboard-ranking" class="hidden"></div>
-					<div class="game-over-actions">
+					<!-- <div id="leaderboard-ranking" class="hidden"></div> -->
+					<div id="game-over-actions">
 						<div id="post-submission-actions">
 							<button id="restart-btn" class="primary-btn">Try Again</button>
-							<button id="replay-btn" class="secondary-btn">▶ Watch Replay</button>
 						</div>
 					</div>
 				</div>
@@ -102,12 +91,7 @@
 						</div>
 						<div id="leaderboard-error" class="leaderboard-message hidden"></div>
 						<div id="leaderboard-loading" class="leaderboard-message hidden">Loading...</div>
-						<div class="leaderboard-sections">
-							<section class="leaderboard-section">
-								<h3>Top Verified Scores</h3>
-								<ol id="leaderboard-verified-list" class="leaderboard-list"></ol>
-							</section>
-						</div>
+						<ol id="leaderboard-verified-list" class="leaderboard-list"></ol>
 					</div>
 				</div>
 			</main>
@@ -118,24 +102,6 @@
 		</div>
 		<script type="module" src="/src/main.ts"></script>
 		<script>
-			// Player Name Persistence
-			const nameInput = document.getElementById("player-name-input")
-			if (nameInput) {
-				// Load name on page load
-				const savedName = localStorage.getItem("bp_player_name")
-				if (savedName) nameInput.value = savedName
-
-				// Save name when input loses focus (blur). The 'input' event was too aggressive.
-				nameInput.addEventListener("blur", (e) => {
-					const value = e.target.value.trim()
-					if (value) {
-						localStorage.setItem("bp_player_name", value)
-					} else {
-						localStorage.removeItem("bp_player_name")
-					}
-				})
-			}
-
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", () => {
 					const isLocalhost = Boolean(
