--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 					<p id="game-over-highscore-label" class="hidden">New High Score!</p>
 					<p>Final Score: <span id="final-score">0</span></p>
 					<p id="game-over-quote"></p>
+					<div id="leaderboard-status-container" class="hidden">
+						<p id="leaderboard-status-text"></p>
+					</div>
 					<div id="player-name-submission-container">
 						<input type="text" id="player-name-input" placeholder="Enter your name" />
 					</div>
@@ -75,6 +78,10 @@
 						<div class="setting-item">
 							<label for="sensitivity-slider">Sensitivity: <span id="sensitivity-value">1.0</span></label>
 							<input type="range" id="sensitivity-slider" min="1.0" max="3.0" step="0.1" value="1.0" />
+						</div>
+						<div class="setting-item" style="display: flex; justify-content: space-between; align-items: center">
+							<label for="chill-mode-toggle">Chill Mode (No Timer)</label>
+							<input type="checkbox" id="chill-mode-toggle" />
 						</div>
 						<div class="setting-item" style="margin-top: 20px; border-top: 1px solid #333; padding-top: 15px">
 							<button id="clear-cache-btn" class="secondary-btn" style="width: 100%; border: 1px solid #ff4444; color: #ff4444">Clear Cache & Reload</button>
