feat: add dev mode visuals and improve vertical responsiveness
Dev Mode Visuals: Added a dark red theme, "DEV" watermark, and a control help panel that activates automatically in development mode.
Short Viewport Support: Implemented responsive scaling for cases where vertical space is limited (e.g., dev tools open or split-screen), including dynamic header resizing and board padding.
UI Polish: Refined the global accent color and tuned hover effects for buttons and game pieces for a smoother feel.
Renderer Improvements: Decoupled canvas aspect ratio from CSS to allow the game to fit perfectly in constrained heights.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	</head>
-	<body>
+	<body class="">
+		<div id="dev-indicator" class="hidden">DEV</div>
+		<div id="dev-controls-help" class="hidden">
+			<h4>Dev Controls</h4>
+			1-4: Spawn Bomb<br />
+			K: End Game
+		</div>
 		<div id="app">
 			<header>
 				<button id="settings-btn" aria-label="Settings">⚙️</button>
